# altas

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  THINKS  TODO  TODO.md  autoformat.sh
appkit/: CMakeLists.txt  args.cc  args_test.cc  env.cc  env_test.cc  module.cc  module_test.cc
appkit/module/: module_test.cc
bbt/base/: CMakeLists.txt  attributes.h  config.h  fmt.h  fmt_test.cc  fs.cc  fs.h  fs_test.cc  json.h  json_test.cc  log.cc  log.h  log_test.cc  logging.cc  optimization.h  status.cc  status.h  status_test.cc  str_util.cc  str_util.h  str_util_test.cc  string_view.cc  string_view.h  sys.cc  sys.h  sys_test.cc  timestamp.cc  timestamp.h  timestamp_test.cc
bbt/bus/: CMakeLists.txt  bus_test.cc  callbacks.h  client.cc  client.h  client_test.cc  connection.cc  connection.h  connection_manager.cc  connection_manager.h  connection_test.cc  context.cc  context.h  invoker.cc  invoker.h  invoker_test.cc  method.h  method_mux.cc  method_mux.h  method_mux_test.cc  msg.cc  msg.h  msg_packer.cc  msg_packer.h  msg_packer_test.cc  msg_proxy.cc  msg_proxy.h  msg_proxy_test.cc  msg_queue.cc  msg_queue.h  msg_queue_test.cc  msg_test.cc  router.cc  router.h  router_test.cc  server.cc  server.h  server_test.cc  service.cc  service.h  (+5 more)
bbt/bus/server/: connection.cc  connection.h  connection_manager.cc  connection_manager.h
bbt/html/: CMakeLists.txt  document.cc  document.h  elements.h
bbt/html/elements/: element.cc  element.h  form.h  link.h  table.cc  table.h
bbt/http/: CMakeLists.txt  client.cc  client.h  client_example.cc  connection.cc  connection.h  connection_manager.cc  connection_manager.h  form_data.cc  form_data.h  form_data_test.cc  header.h  reply.cc  reply.h  request.cc  request.h  request_handler.cc  request_handler.h  request_handler_test.cc  request_parser.cc  request_parser.h  response.cc  response.h  server.cc  server.h  server_example.cc  server_test.cc  url.cc  url.h  url_test.cc
bbt/http/server/: connection.cc  connection.h  connection_manager.cc  connection_manager.h  file_server.cc  file_server.h  file_server_demo.cc  file_server_test.cc  request_parser.cc  request_parser.h  serve_mux.cc  serve_mux.h  serve_mux_test.cc
bbt/io/: CMakeLists.txt  buffer.cc  buffer.h  buffer_test.cc  context.h  context_test.cc  ipaddr.cc  ipaddr.h  kqueue.cc
bbt/io/http/: request.cc  request.h  request_test.cc  response.cc  response.h  response_test.cc  server.cc  server.h  server_test.cc
bbt/net/: CMakeLists.txt  base_connection.h  buffer.cc  buffer.h  buffer_test.cc  callbacks.h  connection.h  http_request_test.cc  ipaddr.cc  net_proto.h  net_proto_test.cc  tcp_client.cc  tcp_client.h  tcp_connection.cc  tcp_connection.h  tcp_connection_manager.cc  tcp_connection_manager.h  tcp_server.cc  tcp_server.h  tcp_server_test.cc  tcp_test.cc
bbt/net/http/: http_context.cc  http_request.cc  http_request_test.cc  http_response.cc  http_response_test.cc  http_server.cc  http_server_test.cc  request.cc  request.h  request_test.cc  response.cc  response.h  response_test.cc  server.cc  server_test.cc
bbt/net/tcp/: client.cc  client.h  connection.cc  connection.h  connection_manager.cc  connection_manager.h  server.cc  server.h  server_test.cc
bbt/net/testing/: mocks.h
bbt/util/: CMakeLists.txt  attributes.h  config.h  fmt.h  fmt_test.cc  fs.cc  fs.h  fs_test.cc  json_test.cc  logging.cc  logging.h  logging_test.cc  optimization.h  status.cc  status_test.cc  str_util.cc  str_util_test.cc  string_view.cc  string_view.h  string_view_test.cc  sys.cc  sys.h
cppboot/adv/: CMakeLists.txt  args.cc  args.h  args_test.cc  env.cc  env.h  env_test.cc  module.h  object.h  plugin.h  plugin_loader.cc  plugin_manager.cc  plugin_manager.h  plugin_test.cc
cppboot/adv/bus/: client.cc  client.h  client_test.cc  context.cc  context.h  invoker.cc  invoker.h  invoker_test.cc  method.h  msg.cc  msg.h  msg_packer.cc  msg_packer.h  msg_packer_test.cc  msg_test.cc  router.cc  router.h  router_test.cc  server.cc  server.h  server_test.cc  service.cc  service.h  service_test.cc
cppboot/adv/module/: loader.cc  manager.cc  module_test.cc
cppboot/appkit/: CMakeLists.txt  args.cc  args.h  args_test.cc  env.cc  env.h  env_test.cc  module.h  object.h
cppboot/appkit/module/: loader.cc  manager.cc  module_test.cc
cppboot/base/: CMakeLists.txt  attributes.h  config.h  fmt.h  fmt_test.cc  fs.cc  fs.h  fs_test.cc  json.h  json_test.cc  log.cc  log.h  log_test.cc  macros.h  optimization.h  status.cc  status.h  status_test.cc  str_util.cc  str_util.h  str_util_test.cc  string_view.cc  string_view.h  string_view_test.cc  sys.cc  sys.h  sys_test.cc  timestamp.cc  timestamp.h  timestamp_test.cc
cppboot/bus/: CMakeLists.txt  client.cc  client.h  client_test.cc  context.cc  context.h  invoker.cc  invoker.h  invoker_test.cc  method.h  msg.cc  msg.h  msg_packer.cc  msg_packer.h  msg_packer_test.cc  msg_test.cc  router.cc  router.h  router_test.cc  server.cc  server.h  server_test.cc  service.cc  service.h  service_test.cc
cppboot/html/: CMakeLists.txt  document.cc  document.h  elements.h
cppboot/html/elements/: element.h  form.h  link.h  table.cc  table.h
cppboot/http/: CMakeLists.txt  client.cc  client.h  form_data.cc  form_data.h  form_data_test.cc  header.h  request.cc  request.h  response.cc  response.h  server.cc  server.h  server_test.cc  url.cc  url.h  url_test.cc
cppboot/http/server/: connection.cc  connection.h  connection_manager.cc  connection_manager.h  file_server.cc  file_server.h  file_server_demo.cc  file_server_test.cc  request_parser.cc  request_parser.h  (+3 more)
cppboot/io/: CMakeLists.txt
cppboot/net/: CMakeLists.txt  buffer.cc  buffer.h  buffer_test.cc  callbacks.h  connection.h
examples/todo/: CMakeLists.txt  core.cc  core.h  core_test.cc  server.cc  todo.cc  ui.h
modules/debugger/: CMakeLists.txt  debugger_test.cc
src/appkit/: CMakeLists.txt  args.cc  module.cc  module_test.cc  service.cc  service_test.cc
src/base/: CMakeLists.txt  fs.cc  fs_test.cc  logging_test.cc  status.cc  status_test.cc  str_util.cc  str_util_test.cc  string_view_test.cc  sys_util.cc
(+166 files in other folders)
